# nol

./: .gitignore  ARCHITECTURE.md  BUILD_ORDER.md  CLAUDE.md  Cargo.toml  README.md
crates/assembler/: Cargo.toml
crates/assembler/src/: disassembler.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/assembler/tests/: assembler_tests.rs
crates/common/: Cargo.toml
crates/verifier/: Cargo.toml
crates/verifier/src/: contracts.rs  error.rs  exhaustion.rs  hashing.rs  lib.rs  limits.rs  reachability.rs  stack.rs  structural.rs  types.rs
crates/verifier/tests/: verifier_tests.rs
crates/vm/: Cargo.toml
docs/: ARCHITECTURE.md  BUILD_ORDER.md  EXAMPLES.md  EXTENDED_ROADMAP.md  SEMANTIC_VERIFICATION.md  SPEC.md  phase1-plan.md  phase2-plan.md  phase3-plan.md
nolang-cli/: Cargo.toml
nolang-cli/src/: commands.rs  generate.rs  json.rs  lib.rs  main.rs  witness.rs
nolang-cli/src/catalog/: array_forall.rs  binding_drop.rs  bitwise_ops.rs  boolean_logic.rs  char_ops.rs  comparison.rs  constants.rs  file_ops.rs  integer_math.rs  mod.rs  multi_function.rs  pattern_match.rs  process_ops.rs  recursive.rs  rich_contracts.rs  string_ops.rs  tuple_variant.rs  type_ops.rs
nolang-cli/tests/: cli_tests.rs
nolang-ml/: .gitignore  README.md  requirements.txt  run_feedback_cycle.sh
nolang-ml/configs/: lora_7a.yaml  lora_7b.yaml  lora_8a.yaml  lora_9a.yaml  lora_9b.yaml
nolang-ml/scripts/: build_feedback_dataset.py  collect_failures.py  compare.py  evaluate.py  inference_7a.py  inference_7b.py  ingest_riva_sessions.py  measure_improvement.py  prepare_data.py  retrain.py  (+3 more)
(+405 files in other folders)
