[package]
name = "nolang-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Static analysis and verification for NoLang instruction streams"

[dependencies]
nolang-common = { path = "../common" }
thiserror = "1"
blake3 = "1"

[dev-dependencies]
proptest = "1"
